# POS_Semestralka

./: CMakeLists.txt  Používateľská dokumentácia_Danko.docx  Programátorská dokumentácia_Danko.docx  UML.puml
build1/: CMakeCache.txt  Makefile  cmake_install.cmake
build1/.cmake/api/v1/reply/: cache-v2-26357529d457ea155858.json  cmakeFiles-v1-8c4fec32a461c4659132.json  codemodel-v2-c6237318972282b6c16b.json  index-2024-12-30T11-41-46-0945.json  target-client-Debug-8d2105b6fe1418e8e76f.json
build1/client/: Makefile  client
client/: CMakeLists.txt  game_logic.c  game_logic.h  gui.c  gui.h  main.c  terminal_gui.c  terminal_gui.h
server/: CMakeLists.txt  game_logic.c  game_logic.h  server.c  server.h
